--- a/package.json
+++ b/package.json
@@ -10,11 +10,19 @@
   },
   "dependencies": {
     "@atlaskit/atlassian-navigation": "^2.3.4",
+    "@atlaskit/avatar": "^21.1.8",
     "@atlaskit/breadcrumbs": "^11.7.10",
+    "@atlaskit/button": "^16.5.5",
+    "@atlaskit/dropdown-menu": "^11.5.12",
+    "@atlaskit/dynamic-table": "^14.8.11",
+    "@atlaskit/form": "^8.8.4",
     "@atlaskit/menu": "^1.4.8",
+    "@atlaskit/modal-dialog": "^12.4.8",
     "@atlaskit/page-header": "^10.3.2",
     "@atlaskit/page-layout": "^1.3.8",
     "@atlaskit/side-navigation": "^1.5.2",
+    "@atlaskit/textfield": "^5.3.5",
+    "@emotion/react": "^11.10.5",
     "@next/font": "13.1.6",
     "axios": "^1.3.2",
     "eslint": "8.33.0",
