--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@atlaskit/page-header": "^10.3.2",
     "@atlaskit/page-layout": "^1.3.8",
     "@atlaskit/side-navigation": "^1.5.2",
+    "@atlaskit/textarea": "^4.5.5",
     "@atlaskit/textfield": "^5.3.5",
     "@emotion/react": "^11.10.5",
     "@next/font": "13.1.6",
