--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "qrcode": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.19",
+    "@types/qrcode": "^1.5.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "autoprefixer": "^10.4.13",
