--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@atlaskit/modal-dialog": "^12.4.8",
     "@atlaskit/page-header": "^10.3.2",
     "@atlaskit/page-layout": "^1.3.8",
+    "@atlaskit/select": "^16.1.3",
     "@atlaskit/side-navigation": "^1.5.2",
+    "@atlaskit/tabs": "^13.3.11",
     "@atlaskit/textarea": "^4.5.5",
     "@atlaskit/textfield": "^5.3.5",
     "@emotion/react": "^11.10.5",
