--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@atlaskit/modal-dialog": "^12.4.8",
     "@atlaskit/page-header": "^10.3.2",
     "@atlaskit/page-layout": "^1.3.8",
+    "@atlaskit/section-message": "^6.3.10",
     "@atlaskit/select": "^16.1.3",
     "@atlaskit/side-navigation": "^1.5.2",
     "@atlaskit/tabs": "^13.3.11",
